[project]
name = "cozy_comfyui"
dynamic = ["version"]
description = "Cozy ComfyUI Node support library"
maintainers = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Alexander G. Morano", email = "amorano@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.10"
dependencies = [
    "aenum>=3.1.15",
    "aiohttp",
    "blendmodes",
    "daltonlens",
    "loguru",
    "matplotlib",
    "numba",
    "numpy<2",
    "opencv-contrib-python",
    "Pillow",
    "requests",
    "scikit-image",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "cozy_comfyui.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cozy_comfyui*"]
namespaces = false
